# FQSHA

./: FQSHA.py  FQSHA.ui  FQSHA_InstallationGuide_Windows.txt  LICENSE  README.md  environment.yml  fqsha_windows_env.yml  post_install.sh  pyproject.toml
Input_data/: Faults_test.json  MFF2_figure4.json  ZFF_figure4.json  ZM3_figure4.json  Zagros_faults.json  Zagros_faults_figure3.json
fqsha/: FQSHA.py  FQSHA_Functions.py  Mapping.py  OpenQuake_input_generator.py  SeismicActivityRate.py  SeismicActivityRate1.py  __main__.py
fqsha/Input_data/: Zagros_faults.json
fqsha/tests/: test_sactivityrate_xmlExport.py
fqshaL/: FQSHA.py  FQSHA_Functions.py  OpenQuake_input_generator.py  __init__.py
fqshaL/tests/: test_gui.py
src/: FQSHA_Functions.py  Mapping.py  OpenQuake_input_generator.py  SeismicActivityRate.py
tests/: test_sactivityrate_xmlExport.py
