
[project]
name = "fqsha"
version = "0.1.0"
description = "FQSHA: An open-source Python software for Fault-Based Seismic Hazard Assessment"
authors = [
    {name = "Nasrin Tavakolizadeh", email = "n.tavakolizadeh@ubi.pt"},
    {name = "Hamzeh Mohammadigheymasi"},
    {name = "Nuno Pombo"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}

dependencies = [
    "numpy==1.24.4",  # Required for OpenQuake compatibility
    "pandas",
    "matplotlib",
    "PyQt5",
    "openquake-engine==3.23.0"
]

[project.optional-dependencies]
gmt = ["pygmt"]                     # Install with: pip install .[gmt]
gdal = ["gdal", "fiona"]            # Install with: pip install .[gdal]
dev = ["pytest", "coverage"]       # Install with: pip install .[dev]


[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fqsha*"]
exclude = ["input_data*", "FQSHA_output*", "output_files*", "tests*"]
